--- a/wkls/index.html
+++ b/wkls/index.html
@@ -141,6 +141,7 @@
             "answers questions about texts being studied",
             "appears to enjoy listening to texts and is able to answer questions about them",
             "attentively repeats teacher-modelled use of the language and participates in oral use of the language",
+            "comprehends words and phrases by responding to questions and routine classroom instructions",
             // ... (add more options)
         ], 3);
 
@@ -148,6 +149,7 @@
             "actively participates in choral reading situations and is able to recognize familiar words",
             "actively participates in shared reading activities",
             "confidently identifies letter-sound relationships",
+            "confidently locates particular words in familiar texts and is able to sound out words",
             // ... (add more options)
         ], 3);
 
@@ -155,6 +157,7 @@
             "actively participates in class discussions and shares ideas using familiar words",
             "actively participates in class language games",
             "actively takes part in short drama activities and has demonstrated very good pronunciation",
+            "appears to enjoy singing songs learnt in class time and confidently sings these songs when required",
             // ... (add more options)
         ], 3);
 
@@ -162,6 +165,7 @@
             "a thoughtful and diligent student who has displayed a sound standard in presentation and written expression",
             "accurately copies words and/or sentences",
             "applied knowledge and skills to a high standard in writing tasks",
+            "completed charts, captions and comprehension activities to a very high standard",
             // ... (add more options)
         ], 3);
 
