--- a/wkls/index.html
+++ b/wkls/index.html
@@ -17,7 +17,7 @@
         </video>
     </div>
     <div class="container">
-        <h1>Report Generator</h1>
+        <h1><b><i class="fas fa-magic"></i></b>. Report Generator</h1>
         <div class="form-section">
             <label for="studentName">Student's Name</label>
             <input type="text" id="studentName" name="studentName" placeholder="Enter student's name">
