--- a/wkls/index.html
+++ b/wkls/index.html
@@ -17,7 +17,7 @@
         </video>
     </div>
     <div class="container">
-        <h1><img src="/wkls/logo.png" alt="Logo" class="logo"> Report Generator .<b><i class="fas fa-magic"></i></b></h1>
+        <h1><img src="/wkls/logo.png" alt="Logo" class="logo">Report Generator</b></h1>
         <div class="form-section">
             <label for="studentName">Student's Name</label>
             <input type="text" id="studentName" name="studentName" placeholder="Enter student's name">
@@ -81,9 +81,7 @@
             <span id="characterCount">0/1500</span>
         </div>
         <button id="brushBtn"><i class="fas fa-magic"></i></button>
-
         <button id="generateReportBtn">Generate Report</button>
-
     </div>
 
     <script>
