--- a/wkls/index.html
+++ b/wkls/index.html
@@ -17,7 +17,7 @@
         </video>
     </div>
     <div class="container">
-        <h1><img src="/wkls/logo.png" alt="Logo" class="logo">Report Generator</b></h1>
+        <h1><img src="/wkls/logo.png" alt="Logo" class="logo">Report Generator</h1>
         <div class="form-section">
             <label for="studentName">Student's Name</label>
             <input type="text" id="studentName" name="studentName" placeholder="Enter student's name">
@@ -52,24 +52,24 @@
 
         <div class="checkbox-group">
             <div class="checkbox-group-item">
-                <h2>Listening</h2>
+                <h2><img src="/wkls/listening.png" alt="Listening Icon" class="logo">Listening</h2>
                 <div class="checkboxes" id="listeningCheckboxes"></div>
             </div>
 
             <div class="checkbox-group-item">
-                <h2>Reading</h2>
+                <h2><img src="/wkls/reading.png" alt="Reading Icon" class="logo">Reading</h2>
                 <div class="checkboxes" id="readingCheckboxes"></div>
             </div>
         </div>
 
         <div class="checkbox-group">
             <div class="checkbox-group-item">
-                <h2>Speaking</h2>
+                <h2><img src="/wkls/speaking.png" alt="Speaking Icon" class="logo">Speaking</h2>
                 <div class="checkboxes" id="speakingCheckboxes"></div>
             </div>
 
             <div class="checkbox-group-item">
-                <h2>Writing</h2>
+                <h2><img src="/wkls/writing.png" alt="Writing Icon" class="logo">Writing</h2>
                 <div class="checkboxes" id="writingCheckboxes"></div>
             </div>
         </div>
