--- a/wkls/index.html
+++ b/wkls/index.html
@@ -17,9 +17,9 @@
         </video>
     </div>
     <div class="container">
-        <h1><img src="/wkls/logo.png" alt="Logo" class="logo">Report Generator</h1>
+        <h1><img src="/wkls/logo.png" alt="Logo" class="h1logo">Report Generator</h1>
         <div class="form-section">
-            <label for="studentName">Student's Name</label>
+            <h2><img src="/wkls/student.png" alt="Student Icon" class="h2logo">Details</h2>
             <input type="text" id="studentName" name="studentName" placeholder="Enter student's name">
         </div>
         <div class="slider-section">
@@ -52,30 +52,30 @@
 
         <div class="checkbox-group">
             <div class="checkbox-group-item">
-                <h2><img src="/wkls/listening.png" alt="Listening Icon" class="logo">Listening</h2>
+                <h2><img src="/wkls/listening.png" alt="Listening Icon" class="h2logo">Listening</h2>
                 <div class="checkboxes" id="listeningCheckboxes"></div>
             </div>
 
             <div class="checkbox-group-item">
-                <h2><img src="/wkls/reading.png" alt="Reading Icon" class="logo">Reading</h2>
+                <h2><img src="/wkls/reading.png" alt="Reading Icon" class="h2logo">Reading</h2>
                 <div class="checkboxes" id="readingCheckboxes"></div>
             </div>
         </div>
 
         <div class="checkbox-group">
             <div class="checkbox-group-item">
-                <h2><img src="/wkls/speaking.png" alt="Speaking Icon" class="logo">Speaking</h2>
+                <h2><img src="/wkls/speaking.png" alt="Speaking Icon" class="h2logo">Speaking</h2>
                 <div class="checkboxes" id="speakingCheckboxes"></div>
             </div>
 
             <div class="checkbox-group-item">
-                <h2><img src="/wkls/writing.png" alt="Writing Icon" class="logo">Writing</h2>
+                <h2><img src="/wkls/writing.png" alt="Writing Icon" class="h2logo">Writing</h2>
                 <div class="checkboxes" id="writingCheckboxes"></div>
             </div>
         </div>
 
         <div class="comment-section">
-            <label for="overallComment">Overall Comment:</label>
+            <h2><img src="/wkls/comment.png" alt="Comment Icon" class="h2logo">Overall Comment</h2>
             <textarea id="overallComment" class="comment-box"
                 placeholder="Enter your overall feedback here. Need help? Click the 'Brush' button below for AI-generated suggestions."></textarea>
             <span id="characterCount">0/1500</span>
