--- a/wkls/index.html
+++ b/wkls/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <h1><img src="/wkls/logo.png" alt="Logo" class="h1logo">Report Generator</h1>
         <div class="form-section">
-            <h2><img src="/wkls/student.png" alt="Student Icon" class="h2logo">Details</h2>
+            <label class="label" for="studentName">Student's Name</label>
             <input type="text" id="studentName" name="studentName" placeholder="Enter student's name">
         </div>
         <div class="slider-section">
