--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -404,12 +404,12 @@
                 });
             input.value = "";
         }
-        function appHeight() {
-            const doc = document.documentElement
-            doc.style.setProperty('--vh', (window.innerHeight*.01) + 'px');
-        }
-        window.addEventListener('resize', appHeight);
-        appHeight();
+        // function appHeight() {
+        //     const doc = document.documentElement
+        //     doc.style.setProperty('--vh', (window.innerHeight*.01) + 'px');
+        // }
+        // window.addEventListener('resize', appHeight);
+        // appHeight();
         document.addEventListener("DOMContentLoaded", function () {
             document.getElementById("theme-toggle").addEventListener("change", toggleTheme);
         });
