--- a/mlcenitex/index.html
+++ b/mlcenitex/index.html
@@ -226,7 +226,7 @@
             </header>
             <main class="chat-container">
                 <div class="chat-header">
-                    <div class="header-text">Knowledge Base Chatbot Powered by GenAI</div>
+                    <div class="header-text">Knowledge Base Bot Powered by GenAI</div>
                     <div class="toggle-container">
                         <input type="checkbox" class="theme-toggle-checkbox" id="theme-toggle">
                         <label for="theme-toggle" class="theme-toggle-slider"></label>
